# server/routes/connections/get.go
@@ -20,13 +20,16 @@ type HandleGetAllConectionsResponse struct {
 // @Description Gets all the connections that a user has added
 // @Tags connections
 // @Produce json
+// @Param Authorization header string true "Bearer token"
 // @Success 200 {object} HandleGetAllConectionsResponse "Returns all connections"
+// @Failure 400 {object} types.ErrorResponse "Invalid connection ID"
+// @Failure 404 {object} types.ErrorResponse "Connection with the given ID does not exist or you don't have permission to view it"
 // @Failure 500 {object} types.ErrorResponse "Internal error"
 // @Router /connections [get]
 func HandleGetAllConnections(c *gin.Context) {
 	db := database.InternalDb
 
-	connectionsInDb, err := db.RunRawQuery("SELECT id, common_name, database_name, host, port, username, ssl_mode FROM connections")
+	connectionsInDb, err := db.RunQueryWithParams("SELECT id, common_name, database_name, host, port, username, ssl_mode FROM connections WHERE owner_id = (SELECT id FROM users WHERE username = $1)", c.GetString("username"))
 	if err != nil {
 		c.JSON(500, routeTypes.ErrorResponse{
 			Error:   true,
@@ -67,6 +70,7 @@ type HandleGetConnectionByIdResponse struct {
 // @Description Get the data of a connection by its ID
 // @Tags connections
 // @Produce json
+// @Param Authorization header string true "Bearer token"
 // @Param id path int true "Connection ID"
 // @Success 200 {object} HandleGetConnectionByIdResponse "Returns the connection data"
 // @Failure 400 {object} types.ErrorResponse "Invalid connection ID"
@@ -102,7 +106,7 @@ func HandleGetConnectionById(c *gin.Context) {
 		return
 	}
 
-	connection, err := db.RunQueryWithParams("SELECT id, common_name, database_name, host, port, username, ssl_mode FROM connections WHERE id = $1", connectionId)
+	connection, err := db.RunQueryWithParams("SELECT c.id, common_name, database_name, host, port, c.username, ssl_mode, u.username FROM connections c INNER JOIN public.users u on u.id = c.owner_id WHERE c.id = $1", id)
 	if err != nil {
 		c.JSON(500, routeTypes.ErrorResponse{
 			Error:   true,
@@ -114,11 +118,19 @@ func HandleGetConnectionById(c *gin.Context) {
 	var connectionMapped types.Connection
 
 	for connection.Next() {
-		err = connection.Scan(&connectionMapped.Id, &connectionMapped.CommonName, &connectionMapped.DatabaseName, &connectionMapped.Host, &connectionMapped.Port, &connectionMapped.Username, &connectionMapped.SslMode)
+		var username string
+		err = connection.Scan(&connectionMapped.Id, &connectionMapped.CommonName, &connectionMapped.DatabaseName, &connectionMapped.Host, &connectionMapped.Port, &connectionMapped.Username, &connectionMapped.SslMode, &username)
 		if err != nil {
 			c.JSON(500, routeTypes.ErrorResponse{
 				Error:   true,
 				Message: "Error scanning connection: " + err.Error(),
+			})
+			return
+		}
+		if username != c.GetString("username") {
+			c.JSON(404, routeTypes.ErrorResponse{
+				Error:   true,
+				Message: "Connection with the given ID does not exist",
 			})
 			return
 		}
